# marketing_agent

./: .env.example  app.py  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  general_agent.py  marketing_agent.py
config/: settings.py
services/: __init__.py  agent_service.py  pdf_service.py  vector_service.py
utils/: __init__.py  logger.py  validators.py
