[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "services", "config", "utils"]

[tool.hatch.build.targets.sdist]
include = [
    "agents/",
    "services/", 
    "config/",
    "utils/",
    "*.py",
    "*.md",
    ".env.example",
    "pyproject.toml"
]

[project]
name = "ai-agent-assistant"
version = "0.1.0"
description = "AI Agent dengan dua mode: General Agent (ChatGPT-like) dan Marketing Agent (RAG-based)"
authors = [
    {name = "farhanfadillahr", email = "farhanfadillahr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Streamlit for web UI
    "streamlit>=1.31.0",
    
    # Configuration management
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # LangChain core framework
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.8",
    "langchain-qdrant>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    
    # Vector database
    "qdrant-client>=1.7.0",
    
    # LLM providers
    "openai>=1.10.0",
    "google-generativeai>=0.8.0",
    
    # PDF processing
    "PyPDF2>=3.0.0",
    
    # HTTP client
    "requests>=2.31.0",
    "httpx>=0.25.0",
    
    # Standard library typing extensions
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-agent-assistant"
Repository = "https://github.com/yourusername/ai-agent-assistant"
Documentation = "https://github.com/yourusername/ai-agent-assistant#readme"
Issues = "https://github.com/yourusername/ai-agent-assistant/issues"

[project.scripts]
ai-agent = "app:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
